Changed color of Previous button into something neutral, Next/Submit as Green, fixed width of buttons to align with the option ones

--- a/web/css/checklist.css
+++ b/web/css/checklist.css
@@ -20,6 +20,7 @@
 }
 
 .checklist-item {
+    font-family: Calibri;
     display: flex;
     align-items: center;
     gap: 16px;
